Changed index file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="h-100">
   <div class="container d-flex h-100">
     <div class="justify-content-center align-self-center text-center mx-auto px-2 py-3 w-100" style="margin: auto;">
-      <h1><i class="fa fa-btc"></i> &nbsp;<i class="fa fa-chevron-right"></i> &nbsp; Sponsor Bitorzo
+      <h1>Sponsor <i class="fa fa-btc"></i>itorzo
       <div class="row card-deck my-3 mx-auto">
         <div class="card">
           <div class="w-100">
