Added static receive address in cases BTCPay is syncing, unavailable for some reason

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="h-100">
-  <div class="container d-flex h-100">
+  <div class="container d-flex">
     <div class="justify-content-center align-self-center text-center mx-auto px-2 py-3 w-100" style="margin: auto;">
       <h1>Sponsor <i class="fa fa-btc"></i>itorzo
       <div class="row card-deck my-3 mx-auto">
@@ -43,11 +43,17 @@
 			  <input type="image" class="submit" name="submit" src="https://pay.bitorzo.io/img/paybutton/pay.svg" style="width:209px" alt="Pay with BtcPay, Self-Hosted Bitcoin Payment Processor">
 			  
             </form>
+
           </div>
         </div>
       </div>
     </div>
   </div>
+ 
+  	  			<div class="justify-content-center align-self-center text-center mx-auto px-2 py-3 w-100" style="margin: auto;">
+			If BTCPay is not available at the moment:<br>
+			bc1qpacylhq7kkghr7sktmu2tpc9u0gnmy29mpgcvd
+			</div>
 </body>
 
 
